syntax = "proto3";

package events.v1;

option go_package = "github.com/nkolesnikov999/micro2-OK/shared/pkg/proto/events/v1;events_v1";

// Заказ зарегистрирован
message ShipAssembled {
    string event_uuid = 1;         // Уникальный идентификатор события (для идемпотентности)
    string order_uuid = 2;         // Идентификатор собранного заказа
    string user_uuid = 3;          // Идентификатор пользователя
    int64 build_time_sec = 4;      // Время сборки в секундах
}